--- a/quoteweb/package.json
+++ b/quoteweb/package.json
@@ -2,7 +2,7 @@
   "name": "quoteweb",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "page.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "path": "^0.12.7"
   }
 }
